--- a/static/index.html
+++ b/static/index.html
@@ -143,7 +143,7 @@
       try {
         const resp = await fetch(`/api/quotes?symbols=${encodeURIComponent(symbols)}`);
         if (!resp.ok) {
-          throw new Error(\`Backend error: \${resp.status}\`);
+          throw new Error(`Backend error: ${resp.status}`);
         }
         const data = await resp.json();
         renderTable(data);
